--- a/index.html
+++ b/index.html
@@ -403,6 +403,10 @@ TEAMC 2018 includes Agile Software Development, Data Management, Web Intelligenc
                             <!-- <p style="font-size:1.2em;" align="justify"> -->
                             <ul align='left' style="font-size:15px">
                                 <li>
+                                    Phase 3 is only for the teams selected in <span class="color">top 12</span>.
+                                </li>
+                                <br>
+                                <li>
                                     The last date for submission of paper is
                                     <span class="color">
                                         1st march 2018
@@ -410,7 +414,12 @@ TEAMC 2018 includes Agile Software Development, Data Management, Web Intelligenc
                                 </li>
                                 <br>
                                 <li>
-                                    Atleast one member of the team has to register for the TEAMC conference is they wish to present their paper.
+                                    Atleast one member of the team has to 
+                                    <a target="_blank" href="https://www.imsnsit.org/imsnsit/elearn_fdpconference_new.php">
+                                        <span class="color">
+                                        register
+                                    </span>
+                                    </a> for the TEAMC conference if they wish to present their paper.
                                 </li>
                                 <br>
                                 <li>
