--- a/index.html
+++ b/index.html
@@ -176,7 +176,11 @@ Welcome Slider
             <p>Trek. Report. Hack. Adapt. Achieve</p>
             <br/>
             <!-- <h3 style="color: #FFC107">Hackathon will be held on</h3> -->
-            <marquee behavior="alternate"><a href='#announce'><h3 style="color: #FF9800">Click here to see Announcements</h3></a></marquee>
+            <marquee behavior="alternate">
+                <a href='#announce'>
+                    <h3 style="color: #FF9800">Click here to see Announcements</h3>
+                </a>
+            </marquee>
 
             <!-- <div class="row text-center">
   <div class="col-xs-12">
@@ -252,9 +256,12 @@ Welcome Slider
 
             <!-- main nav -->
             <nav class="collapse navbar-collapse navbar-right" role="Navigation">
-                <ul id="nav" class="nav navbar-nav navigation-menu">
+                <ul id="nav" class="nav navbar-nav navigation-menu" style="font-size:15px !important;">
                     <li>
                         <a data-scroll href="#body">Home</a>
+                    </li>
+                    <li>
+                        <a data-scroll href="#announce">Announcements</a>
                     </li>
                     <li>
                         <a data-scroll href="#about">About Us</a>
@@ -403,7 +410,8 @@ TEAMC 2018 includes Agile Software Development, Data Management, Web Intelligenc
                             <!-- <p style="font-size:1.2em;" align="justify"> -->
                             <ul align='left' style="font-size:15px">
                                 <li>
-                                    Phase 3 is only for the teams selected in <span class="color">top 12</span>.
+                                    Phase 3 is only for the teams selected in
+                                    <span class="color">top 12</span>.
                                 </li>
                                 <br>
                                 <li>
@@ -414,11 +422,11 @@ TEAMC 2018 includes Agile Software Development, Data Management, Web Intelligenc
                                 </li>
                                 <br>
                                 <li>
-                                    Atleast one member of the team has to 
+                                    Atleast one member of the team has to
                                     <a target="_blank" href="https://www.imsnsit.org/imsnsit/elearn_fdpconference_new.php">
                                         <span class="color">
-                                        register
-                                    </span>
+                                            register
+                                        </span>
                                     </a> for the TEAMC conference if they wish to present their paper.
                                 </li>
                                 <br>
@@ -448,7 +456,7 @@ TEAMC 2018 includes Agile Software Development, Data Management, Web Intelligenc
                     </div>
                 </div>
                 <div class="col-md-4  text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="250ms">
-                    <div class="block" >
+                    <div class="block">
                         <div class="icon-box">
                             <!-- <i class="tf-strategy"></i> -->
                             <img src='images/HACKEAM.png' width=100px style="margin-top:-15%" />
@@ -459,14 +467,15 @@ TEAMC 2018 includes Agile Software Development, Data Management, Web Intelligenc
                         <div class="content text-center" style="color:rgb(255, 255, 255);min-height:40vh">
                             <!-- <h3 style="color:black">Our Objective</h3> -->
                             <p style="font-size:1em;" align="justify">
-                                After the end of the exhilarating 24hr hackathon all the teams attending came up with different and versatile products which help not only the society but tackle specific problems that they figured out in their treks.
+                                After the end of the exhilarating 24hr hackathon all the teams attending came up with different and versatile products which
+                                help not only the society but tackle specific problems that they figured out in their treks.
                                 <br>
                                 <span class="color">Now it's time to give back</span>
-                                <br>
-                                We encourage all the teams to make a prototype of their solution and to actually take it into production.The prototype should be tested in the community visited and given to them. 
+                                <br> We encourage all the teams to make a prototype of their solution and to actually take it
+                                into production.The prototype should be tested in the community visited and given to them.
                                 All teams who successfully, give back to society will get a certificate of appreciation.
-                                <br> 
-                                Also in case you require any help feel free to contact us, as we'd love to help you in this noble cause.
+                                <br> Also in case you require any help feel free to contact us, as we'd love to help you in this
+                                noble cause.
                             </p>
                         </div>
                     </div>
